--- a/opsmx-isd-register/pom.xml
+++ b/opsmx-isd-register/pom.xml
@@ -48,6 +48,18 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-runner</artifactId>
+<!--			<version>1.8.2</version>-->
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-migrationsupport</artifactId>
+<!--			<version>1.8.2</version>-->
+			<scope>test</scope>
+		</dependency>
 	<!--
 		<dependency>
 			<groupId>com.wavefront</groupId>
