--- a/opsmx-isd-register/opsmx-isd-register-k8s-deployment.yaml
+++ b/opsmx-isd-register/opsmx-isd-register-k8s-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: opsmx-isd-register
+  name: opsmx-isd-register-service
   namespace: ns-isd-register
 spec:
   ports:
@@ -9,7 +9,7 @@ spec:
     protocol: TCP
     targetPort: 8010
   selector:
-    app: opsmx-isd-register-app
+    app: opsmx-isd-register-service-app
   sessionAffinity: None
   type: ClusterIP
 status:
@@ -19,20 +19,20 @@ status:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: opsmx-isd-register-app-deployment
+  name: opsmx-isd-register-service-app-deployment
   namespace: ns-isd-register
 spec:
   selector:
     matchLabels:
-      app: opsmx-isd-register-app
+      app: opsmx-isd-register-service-app
   replicas: 3
   template:
     metadata:
       labels:
-        app: opsmx-isd-register-app
+        app: opsmx-isd-register-service-app
     spec:
       containers:
-      - name: opsmx-isd-register-app
+      - name: opsmx-isd-register-service-app
         image: ashishck/opsmx-isd-register
         ports:
         - containerPort: 8010
@@ -44,14 +44,14 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: opsmx-isd-register-app-ingress
+  name: opsmx-isd-register-service-app-ingress
   namespace: default
 spec:
   rules:
-  - host: opsmx-isd-register.org
+  - host: opsmx-isd-register-service.org
     http:
       paths:
       - backend:
-          serviceName: opsmx-isd-register
+          serviceName: opsmx-isd-register-service
           servicePort: 8010
-        path: /register
+        path: /webhookTrigger
