--- a/opsmx-isd-register/src/main/resources/application.yaml
+++ b/opsmx-isd-register/src/main/resources/application.yaml
@@ -4,3 +4,37 @@ automation:
 
 redirect:
   url: http://localhost/success.html
+  
+  
+spring:
+  application:
+    name: opsmx-isd-register-service
+  jpa:
+    hibernate:
+      ddl-auto: update
+logging:
+  file:
+    name: /home/ashish/spring-logging/application-backend-dev.log
+  level:
+    org.springframework: ERROR
+    com.online.store.demo: INFO
+management:
+  endpoint:
+    health:
+      enabled: true
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+    jmx:
+      exposure:
+        include: '*'
+server:
+  port : 8010
+springdoc:
+  api-docs:
+    path: /docs
+  swagger-ui:
+    path: /swagger
+    
