--- a/opsmx-isd-register/pom.xml
+++ b/opsmx-isd-register/pom.xml
@@ -156,23 +156,45 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			<!-- tag::plugin[] -->
+<!--			<plugin>-->
+<!--				<groupId>com.spotify</groupId>-->
+<!--				<artifactId>dockerfile-maven-plugin</artifactId>-->
+<!--				<version>1.3.6</version>-->
+<!--				<configuration>-->
+<!--					<repository>${docker.image.prefix}/${project.artifactId}</repository>-->
+<!--					<buildArgs>-->
+<!--						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>-->
+<!--					</buildArgs>-->
+<!--				</configuration>-->
+<!--				<dependencies>-->
+<!--					<dependency>-->
+<!--						<groupId>javax.activation</groupId>-->
+<!--						<artifactId>activation</artifactId>-->
+<!--						<version>1.1.1</version>-->
+<!--					</dependency>-->
+<!--				</dependencies>-->
+<!--			</plugin>-->
+
+
 			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>dockerfile-maven-plugin</artifactId>
-				<version>1.3.6</version>
-				<configuration>
-					<repository>${docker.image.prefix}/${project.artifactId}</repository>
-					<buildArgs>
-						<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
-					</buildArgs>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>javax.activation</groupId>
-						<artifactId>activation</artifactId>
-						<version>1.1.1</version>
-					</dependency>
-				</dependencies>
+				<executions>
+					<execution>
+						<id>build</id>
+						<goals>
+							<goal>build</goal>
+						</goals>
+						<configuration>
+							<repository>ashishck/opsmx-isd-register</repository>
+							<tag>${project.version}</tag>
+							<pullNewerImage>false</pullNewerImage>
+							<buildArgs>
+								<jar_file>${project.build.finalName}.jar</jar_file>
+							</buildArgs>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<!-- end::plugin[] -->
 
