--- a/opsmx-isd-register/opsmx-isd-register-k8s-deployment.yaml
+++ b/opsmx-isd-register/opsmx-isd-register-k8s-deployment.yaml
@@ -5,9 +5,9 @@ metadata:
   namespace: ns-isd-register
 spec:
   ports:
-  - port: 8010
-    protocol: TCP
-    targetPort: 8010
+    - port: 8010
+      protocol: TCP
+      targetPort: 8010
   selector:
     app: opsmx-isd-register-service-app
   sessionAffinity: None
@@ -45,13 +45,20 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: opsmx-isd-register-service-app-ingress
-  namespace: default
+  namespace: ns-isd-register
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/proxy-read-timeout: 3600
+    nginx.ingress.kubernetes.io/proxy-send-timeout: 3600
 spec:
   rules:
-  - host: opsmx-isd-register-service.org
-    http:
-      paths:
-      - backend:
-          serviceName: opsmx-isd-register-service
-          servicePort: 8010
-        path: /webhookTrigger
+    - http:
+        paths:
+          - path: /webhookTrigger
+            backend:
+              serviceName: client-opsmx-isd-register-service
+              servicePort: 8010
+          - path: /opsmx-spinnaker-account
+            backend:
+              serviceName: server-opsmx-isd-register-service
+              servicePort: 8010
