Updated files 1. Added support for cors. 2. Dockerfile 3. K8s deployment file. 4. pom.xml 5. Controller timeout handling.

--- a/opsmx-isd-register/Dockerfile
+++ b/opsmx-isd-register/Dockerfile
@@ -1,11 +1,4 @@
 FROM openjdk:11
-
-FROM postgres:9.4
-
-VOLUME /tmp
-
-ARG JAR_FILE
-
-ADD ${JAR_FILE} app.jar
-
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+ARG JAR_FILE=target/opsmx-isd-register-0.0.1-SNAPSHOT.jar
+COPY ${JAR_FILE} app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
