--- a/opsmx-isd-register/src/test/resources/application.yml
+++ b/opsmx-isd-register/src/test/resources/application.yml
@@ -4,3 +4,18 @@ automation:
 
 redirect:
   url: http://localhost/success.html
+
+spring:
+  datasource:
+    username: postgres
+    url: jdbc:postgresql://localhost:5432/isdregisterdb
+    password: networks123
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        jdbc:
+          lob:
+            non_contextual_creation: true
+    hibernate:
+      ddl-auto: update
