Updated files 1. Added API rate limiter. 2. Added database.

--- a/opsmx-isd-register/src/main/resources/application.yml
+++ b/opsmx-isd-register/src/main/resources/application.yml
@@ -8,26 +8,26 @@ redirect:
 spring:
   application:
     name: opsmx-isd-register-service
-  datasource:
-    driver-class-name: org.postgresql.Driver
-    hikari:
-      connectionTimeout: 10000
-      idleTimeout: 300000
-      maxLifetime: 600000
-      minimumIdle: 10
-      maximumPoolSize: 20
-    test-on-borrow: true
-    testWhileIdle: true
-    url: jdbc:postgresql://localhost:5432/isdregisterdb?useSSL=false
-    username: postgres
-    password: networks123
-  jpa:
-    hibernate:
-      ddl-auto: create
-    propertieshibernate:
-      dialect: org.hibernate.dialect.PostgreSQLDialect
-    show-sql: false
-    generate-ddl: true
+#  datasource:
+#    driver-class-name: org.postgresql.Driver
+#    hikari:
+#      connectionTimeout: 10000
+#      idleTimeout: 300000
+#      maxLifetime: 600000
+#      minimumIdle: 10
+#      maximumPoolSize: 20
+#    test-on-borrow: true
+#    testWhileIdle: true
+#    url: jdbc:postgresql://localhost:5432/isdregisterdb?useSSL=false
+#    username: postgres
+#    password: networks123
+#  jpa:
+#    hibernate:
+#      ddl-auto: create
+#    propertieshibernate:
+#      dialect: org.hibernate.dialect.PostgreSQLDialect
+#    show-sql: false
+#    generate-ddl: true
 logging:
   file:
     name: /home/ashish/spring-logging/application-backend-dev.log
