--- a/opsmx-isd-register/k8s/k8s.yml
+++ b/opsmx-isd-register/k8s/k8s.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: postgres-conf
-  namespace: ns-isd-register-prod
+  namespace: ns-isd-register
 data:
   host: postgres
   name: isdregisterdb
@@ -12,17 +12,29 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: postgres-credentials
-  namespace: ns-isd-register-prod
+  namespace: ns-isd-register
 data:
   postgres_user: cG9zdGdyZXM=
   postgres_password: bmV0d29ya3MxMjM=
 
 ---
 apiVersion: v1
+kind: Secret
+metadata:
+  name: email-credentials
+  namespace: ns-isd-register
+data:
+  email_user: opsmxsaastrialsheet@gmail.com
+  email_password: Q3JhY2toYXJkQDEyMwo=
+  email_to: vishal.patel@opsmx.io
+  email_cc: balaji@opsmx.com
+
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: opsmx-isd-register-service
-  namespace: ns-isd-register-prod
+  namespace: ns-isd-register
   labels:
     name: opsmx-isd-register-service
 spec:
@@ -40,7 +52,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: opsmx-isd-register-service
-  namespace: ns-isd-register-prod
+  namespace: ns-isd-register
 spec:
   selector:
     matchLabels:
@@ -53,7 +65,7 @@ spec:
     spec:
       containers:
         - name: opsmx-isd-register-service
-          image: ashishck/opsmx-isd-register:v5.5.8
+          image: ashishck/opsmx-isd-register:v5.5.10
           ports:
             - containerPort: 8010
           env:
@@ -89,10 +101,10 @@ metadata:
     ingress.kubernetes.io/ssl-redirect: "true"
     kubernetes.io/ingress.class: nginx
   name: opsmx-isd-register-service
-  namespace: ns-isd-register-prod
+  namespace: ns-isd-register
 spec:
   rules:
-    - host: opsmx-register-prod.canis.isd.opsmx.org
+    - host: opsmx-register.canis.isd.opsmx.org
       http:
         paths:
           - backend:
@@ -104,14 +116,14 @@ spec:
             pathType: ImplementationSpecific
   tls:
     - hosts:
-        - opsmx-register-prod.canis.isd.opsmx.org
+        - opsmx-register.canis.isd.opsmx.org
       secretName: reg-new-authtls
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: postgres
-  namespace: ns-isd-register-prod
+  namespace: ns-isd-register
   labels:
     app: postgres
     tier: database
@@ -128,7 +140,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: postgres-pv-claim
-  namespace: ns-isd-register-prod
+  namespace: ns-isd-register
   labels:
     app: postgres
     tier: database
@@ -144,7 +156,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres
-  namespace: ns-isd-register-prod
+  namespace: ns-isd-register
   labels:
     app: postgres
     tier: database
@@ -190,5 +202,4 @@ spec:
         - name: postgres-persistance-storage
           persistentVolumeClaim:
             claimName: postgres-pv-claim
-
 
