--- a/opsmx-isd-register/src/main/resources/application.yml
+++ b/opsmx-isd-register/src/main/resources/application.yml
@@ -1,8 +1,13 @@
 automation:
   webhook:
     url: https://isdgate.canis.isd.opsmx.org/webhooks/webhook/ondemandsaas
-redirect:
-  url: http://localhost/success.html
+sender:
+  email:
+    username: ${EMAIL_USER}
+    password: ${EMAIL_PASS}
+  sendTo:
+    to: ${EMAIL_TO}
+    cc: ${EMAIL_CC}
 spring:
   profiles:
     active: dev
@@ -27,9 +32,11 @@ spring:
     generate-ddl: true
     show-sql: false
     hibernate:
-      ddl-auto: create
-    propertieshibernate:
-      dialect: org.hibernate.dialect.PostgreSQLDialect
+      ddl-auto: update
+    properties:
+      hibernate:
+        use_sql_comments: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 logging:
   file:
     name: ${HOME}/spring-logging/application-backend-dev.log
